# pdfcomp

./: Makefile  Makefile.am  Makefile.in  NEWS  README  README~  config.status  configure  configure.ac  libtool
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile  pdfcomp
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  main.cc  main.cc~  pdfcomp
src/.deps/: main.Po
usr/lib/pdfcomp/: pdfcompScript  pdfcompScript~
